# coreference-resolution

./: .gitignore  CorefInst_Colab.ipynb  Makefile  README.md  config.yaml  package_for_colab.py  prepare_data.py  pyproject.toml  requirements.txt  run_inference.py  setup.py  train_model.py
analysis/: analyse_results.py  baseline.py
configs/: a100.yaml  cpu.yaml  h100.yaml  l4.yaml  t4.yaml
coref/data/: dataset_builder.py  preprocessor.py
coref/eval/: inference.py  postprocessor.py
coref/modeling/: model.py  train.py
docs/: Analysis_Section.md  Implementation_Section.md  Innovation_Section.md  Survey_Section.md
notebooks/: CorefInst_Colab.ipynb  CorefInst_Inference.ipynb  CorefInst_Inference.txt  DOCS.ipynb
scripts/: prepare_data.py  run_inference.py  train_model.py
src/: __init__.py  conll_parser.py  dataset_builder.py  evaluate.py  inference.py  postprocessor.py  preprocessor.py  train.py
tests/: test_zero_mentions.py
